--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/CadastroFuncionario.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/CadastroFuncionario.form
@@ -500,7 +500,7 @@
               <StringArray count="6">
                 <StringItem index="0" value="Selecione"/>
                 <StringItem index="1" value="Gerente"/>
-                <StringItem index="2" value="Farmacu&#xea;tico"/>
+                <StringItem index="2" value="Farmac&#xea;utico"/>
                 <StringItem index="3" value="Caixa"/>
                 <StringItem index="4" value="Estoquista"/>
                 <StringItem index="5" value="Vendedor"/>
