--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/TelaLogin.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/TelaLogin.form
@@ -69,7 +69,7 @@
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="campoUsuário" pref="205" max="32767" attributes="0"/>
+                              <Component id="campoUsuario" pref="205" max="32767" attributes="0"/>
                               <Component id="campoSenha" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -89,7 +89,7 @@
                   <Component id="logo" min="-2" pref="134" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="114" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="2" attributes="0">
-                      <Component id="campoUsuário" min="-2" pref="22" max="-2" attributes="0"/>
+                      <Component id="campoUsuario" min="-2" pref="22" max="-2" attributes="0"/>
                       <Group type="102" alignment="2" attributes="0">
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="39" pref="39" max="39" attributes="0"/>
@@ -106,7 +106,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JTextField" name="campoUsu&#xe1;rio">
+        <Component class="javax.swing.JTextField" name="campoUsuario">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI Black" size="14" style="0"/>
@@ -183,6 +183,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Entrar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEntrarActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -209,6 +212,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="logo2">
           <Properties>
+            <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[1053, 706]"/>
             </Property>
